create-customer/create-customer-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: create-customer-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: create-customer-virtual-service
spec:
  hosts:
  - '*'
  gateways:
  - create-customer-gateway
  http:
    - match:
        - uri:
            prefix: /api/createCustomer
      route:
        - destination:
            host: create-customer
            port:
              number: 8080
